<resources>
    <string name="app_name">InventoryApp</string>
    <string name="empty_text">Please add a product  Click the + button to start</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="insert_error">Insert is not supported for</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="name_label">Name</string>
    <string name="name_hint_text">Product</string>
    <string name="quantity_label">Quantity</string>
    <string name="minus_button_text">-</string>
    <string name="plus_button_text">+</string>
    <string name="price_label">Price</string>
    <string name="order_button_text">Order</string>
    <string name="delete_button_text">Delete</string>
    <string name="click_photo_to_update">Click photo to update</string>
    <string name="product_name">Product Name</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="quantity">0</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_name">Supplier name</string>
    <string name="save">Save</string>
    <string name="order">Order</string>
    <string name="delete">Delete</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="need_permission">Need permission to add photo</string>
    <string name="error_insertion">Error in inserting</string>
    <string name="error_updation">Error in updation</string>
    <string name="record_updated">Record updated</string>
    <string name="dialog_alert">You have some unsaved information. Are you sure you want to go?</string>
    <string name="positive_message">Discard and leave</string>
    <string name="negative_message">No and continue editing</string>
    <string name="cancel">Cancel</string>
    <string name="error_deletion">Error deleting pet</string>
    <string name="name_demo">Name Demo</string>
    <string name="price_demo">Price $25</string>
    <string name="quantity_demo">Quantity 4</string>
</resources>
