<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for a single list item in the list of inventory--><!--Todo Make it more beautiful-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_margin"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/product_thumbnail"
        android:layout_width="@dimen/image_size_small"
        android:layout_height="@dimen/image_size_small"
        android:src="@drawable/ic_photo_black_48dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/inventory_item_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/name_demo" />

        <TextView
            android:id="@+id/inventory_item_price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/price_demo" />

        <TextView
            android:id="@+id/inventory_item_current_quantity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/quantity_demo" />
    </LinearLayout>

    <TextView
        android:id="@+id/sale_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/grey"
        android:gravity="center"
        android:text="Sale"
        android:textSize="@dimen/sale_button_textsize" />

</LinearLayout>